# cookiecutter

./: .gitignore  Cargo.toml  README.md
src/: config.rs  cookie.rs  cookie_db.rs  funcs.rs  macros.rs  main.rs  state.rs  tui.rs  types.rs  util.rs
