[package]
name = "rokie"
description = "A CLI cookie manager for Firefox and Chromium."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
phf =  { version = "0.10", features = ["macros"] }
tui = "0.18"
crossterm = "0.23"
rusqlite = "0.27.0"
once_cell = "1.13.0"
walkdir = "2.3.2"
chrono = "0.4.19"
sysinfo = "0.24.6"
