[package]
name = "cookiecutter"
description = "A CLI cookie manager for Firefox and Chromium."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
phf =  { version = "0.11", features = ["macros"] }
tui = "0.19"
crossterm = "0.29"
rusqlite = "0.36.0"
once_cell = "1.13.0"
walkdir = "2.3.2"
chrono = "0.4.19"
sysinfo = "0.35.1"
